--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,6 +23,9 @@
     margin: 0;
     box-sizing: border-box;
 }
+html{
+    scroll-behavior: smooth;
+}
 #main{
     background-color: var(--nord6);
 }
@@ -38,9 +41,12 @@
 .text-center{
     text-align: center !important;
 }
+.text-blue{
+    color:var(--nord10) !important;
+}
 .row{
-    margin-left: -12px;
-    margin-right: -12px;
+    margin-left: -8px;
+    margin-right: -8px;
 }
 .row::after{
     content: "";
@@ -48,7 +54,7 @@
     clear: both;
 }
 .col{
-    padding:0px 12px;
+    padding:0px 8px;
     float:left;
 }
 .col-third{
@@ -84,7 +90,6 @@ html{
     height: 50px;
     background-color: var(--nord-1);
     z-index: 1;
-
 }
 #nav{
     display: inline-block;
@@ -100,7 +105,7 @@ html{
 #nav li a{
     display: inline-block;
     text-decoration: none;
-    line-height: 50px;
+    line-height: 51px;
     padding: 0px 24px;
 }
 #nav > li:hover > a,
@@ -128,6 +133,7 @@ html{
     display: none;
     text-align: center;
     width: 50px;
+    height: 50px;
     position: absolute;
     top:0;
     bottom: 0;
@@ -227,8 +233,6 @@ html{
     line-height: 24px;
 }
 #content .place-section{
-
-    overflow: hidden;
     margin-top: 24px;
 }
 
@@ -296,7 +300,7 @@ html{
 }
 .modal-header{
     font-weight: 600;
-    font-size: 30px;
+    font-size: 36px;
     background: var(--nord10);
     min-height: 100px;
     display: flex;
@@ -338,9 +342,7 @@ html{
     margin-bottom: 16px;
     text-align: right;
 }
-.modal-footer a{
-    color:var(--nord10);
-}
+
 @keyframes modalFadeIn{
     from{
         transform: translateY(-200px);
@@ -353,6 +355,9 @@ html{
     font-weight: 600;
     font-size: 18px;
     line-height: 1.5;
+}
+#content .contract-devils {
+
 }
 #content .contract-section i{
     width: 32px;
