--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -23,14 +23,16 @@
 }
 /* Tablet and Mobile */
 @media  (max-width: 1023px){
-    #content .confirm-button{
-        padding: 14px 16px;
+    #content .confirm-button,
+    #content .form-control,
+    .modal-input{
+        padding: 12px 16px;
         font-size: 18px;
     }
-    #content .form-control{
-        padding: 8px;
-    }
     
+    #content .form-control{
+        border: var(--nord4);
+    }
 
 }
 /* Mobile */
